[#99190254] Add .travis.yml file.

--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "lz-127",
-  "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sterpe/LZ-127.git"
-  },
-  "author": "Steven Terpe <srterpe@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sterpe/LZ-127/issues"
-  },
-  "homepage": "https://github.com/sterpe/LZ-127"
+	"name": "lz-127",
+	"version": "0.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest --verbose"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sterpe/LZ-127.git"
+	},
+	"author": "Steven Terpe <srterpe@gmail.com>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/sterpe/LZ-127/issues"
+	},
+	"homepage": "https://github.com/sterpe/LZ-127",
+	"devDependencies": {
+		"jest-cli": "^0.4.15"
+	}
 }
