--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"preinstall": "npm install npm",
 		"test": "jest --verbose"
 	},
 	"repository": {
