--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-	"name": "lz-127",
-	"version": "0.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"preinstall": "npm install npm",
-		"test": "jest --verbose"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/sterpe/LZ-127.git"
-	},
-	"author": "Steven Terpe <srterpe@gmail.com>",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/sterpe/LZ-127/issues"
-	},
-	"homepage": "https://github.com/sterpe/LZ-127",
-	"devDependencies": {
-		"jest-cli": "^0.4.15"
-	}
+  "name": "lz-127",
+  "version": "0.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "preinstall": "npm install npm",
+    "test": "jest --verbose"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sterpe/LZ-127.git"
+  },
+  "author": "Steven Terpe <srterpe@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/sterpe/LZ-127/issues"
+  },
+  "homepage": "https://github.com/sterpe/LZ-127",
+  "devDependencies": {
+    "babel-core": "^5.7.2",
+    "jest-cli": "^0.4.15"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react"
+    ]
+  }
 }
