--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "preinstall": "npm install npm",
+    "preinstall": "npm install -g npm",
     "test": "jest --verbose"
   },
   "repository": {
@@ -18,13 +18,17 @@
   },
   "homepage": "https://github.com/sterpe/LZ-127",
   "devDependencies": {
-    "jest-cli": "^0.4.15",
-    "react-tools": "^0.13.3"
+    "babel-core": "^5.7.2",
+    "jest-cli": "^0.4.15"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/preprocessor.js",
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules/react"
     ]
+  },
+  "dependencies": {
+    "immutable": "^3.7.4",
+    "object-assign": "^3.0.0"
   }
 }
